chore!: envio e verificacao de email, BREAKING CHANGE: banco precisa atualizar
